--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 		<header class="header ">
 			<div class="inner">
 				<h1 class="header-logo">
-					<a href=".">JOHO TARO</a>
+					<a href=".">HINO KOK</a>
 				</h1>
 				<nav class="header-nav">
 					<ul class="header-nav-list">
 						<li class="header-nav-item"><a href="#about">ABOUT</a></li>
 						<li class="header-nav-item"><a href="#works">WORKS</a></li>
 						<li class="header-nav-item"><a href="#skill">SKILL</a></li>
+						<li class="header-nav-item"><a href="#hobby">HOBBY</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -36,15 +37,15 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">JOHO TARO</p>
+					<p class="main-visual-title">HINO KOK</p>
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
-							<img src="portfolio/img/profile.png" alt="自画像" />
+							<img class="jigazo" src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
-							HCSなら、即戦力になるためのスキルが<br class="sp-only">ガッチリ身につきます。<br>
+							趣味はテレビゲームと読書<br class="sp-only">最近は自分が食べる料理を作るのにはまっています。<br>
+							ファンタジーの世界でゆっくり生活するゲームを好むが<br class="sp-only">今は対戦型ゲームをしばしばやっている。<br>
 						</p>
 					</div>
 				</div>
@@ -67,7 +68,8 @@
 						<a class="works-item btn-open" href="ensyu/10.html">ENSYU 10</a>
 						<a class="works-item btn-open" href="ensyu/11.html">ENSYU 11</a>
 						<a class="works-item btn-open" href="ensyu/12.html">ENSYU 12</a>
-						<a class="works-item btn-open" href="ensyu/13.html">ENSYU 13</a>
+						<a class="works-item btn-open" href="ensyu/13_1.html">ENSYU 13</a>
+						<a class="works-item btn-open" href="ensyu/13_2.html">ENSYU 13</a>
 						<a class="works-item btn-open" href="ensyu/14.html">ENSYU 14</a>
 						<a class="works-item btn-open" href="ensyu/15.html">ENSYU 15</a>
 						<a class="works-item btn-open" href="ensyu/16.html">ENSYU 16</a>
@@ -93,41 +95,85 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/html-5.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									勉強中です。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/python.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									蛇は好きです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/java.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									paizaでBランクぐらいです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/books.png" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									基本情報はとれたと思います。</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- /skill -->
+
+			<!-- hobby -->
+			<section class="hobby section" id="hobby">
+				<div class="inner">
+					<h2 class="title">HOBBY</h2>
+					<div class="hobby-list">
+						<div class="hobby-item">
+							<p class="hobby-img"><img class="ssbs" src="portfolio/img/ssbs.png" alt=""></p>
+							<div class="hobby-body">
+								<h3 class="hobby-name">スマブラ</h3>
+								<p class="hobby-text">
+									たまに大会に出ています。メインはダックハント・パックン<br>
+									<a href="https://smashmate.net/">スマメイト</a>でレート1600</p>
+							</div>
+						</div>
+						<div class="hobby-item">
+							<p class="hobby-img"><img class="apex" src="portfolio/img/apex.png" alt=""></p>
+							<div class="hobby-body">
+								<h3 class="hobby-name">APEX</h3>
+								<p class="hobby-text">
+									いつもランクはプラチナで疲れ果てています。好きなキャラはバンガロール・ブラッドハウント</p>
+							</div>
+						</div>
+						<div class="hobby-item">
+							<p class="hobby-img"><img src="portfolio/img/meat.png" alt=""></p>
+							<div class="hobby-body">
+								<h3 class="hobby-name">料理</h3>
+								<p class="hobby-text">
+									好きな調味料はパセリ・クレイジーソルト・みりんです。</p>
+							</div>
+						</div>
+						<div class="hobby-item">
+							<p class="hobby-img"><img src="portfolio/img/book.png" alt=""></p>
+							<div class="hobby-body">
+								<h3 class="hobby-name">読書</h3>
+								<p class="hobby-text">
+									ラノベから推理小説など幅広く読みますが、ファンタジーが特に好きです。</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /hobby -->
+			
 			<div class="page-top" id="js-page-top">
 				<span class="material-icons-outlined">expand_less</span>
 			</div>
