--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									勉強中です。</p>
+									現在勉強中です。最近はCSSを重点的に特訓しています。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -107,7 +107,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									蛇は好きです。</p>
+									Pythonは蛇という意味らしいです。蛇は好きです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -115,7 +115,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									paizaでBランクぐらいです。</p>
+									以前はすっきりわかるシリーズの本で勉強していました。paizaでBランクぐらいです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -123,7 +123,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									基本情報はとれたと思います。</p>
+									基本情報はとれたと思います。高度種まで取れたらうれしいです。</p>
 							</div>
 						</div>
 					</div>
@@ -137,7 +137,7 @@
 					<h2 class="title">HOBBY</h2>
 					<div class="hobby-list">
 						<div class="hobby-item">
-							<p class="hobby-img"><img class="ssbs" src="portfolio/img/ssbs.png" alt=""></p>
+							<p class="hobby-img"><img class="ssbs" src="portfolio/img/game_kyoutai_man.png" alt=""></p>
 							<div class="hobby-body">
 								<h3 class="hobby-name">スマブラ</h3>
 								<p class="hobby-text">
@@ -146,7 +146,7 @@
 							</div>
 						</div>
 						<div class="hobby-item">
-							<p class="hobby-img"><img class="apex" src="portfolio/img/apex.png" alt=""></p>
+							<p class="hobby-img"><img class="apex" src="portfolio/img/ski_biathlon2.png" alt=""></p>
 							<div class="hobby-body">
 								<h3 class="hobby-name">APEX</h3>
 								<p class="hobby-text">
@@ -154,11 +154,11 @@
 							</div>
 						</div>
 						<div class="hobby-item">
-							<p class="hobby-img"><img src="portfolio/img/meat.png" alt=""></p>
+							<p class="hobby-img"><img class="cook" src="portfolio/img/meat.png" alt=""></p>
 							<div class="hobby-body">
 								<h3 class="hobby-name">料理</h3>
 								<p class="hobby-text">
-									好きな調味料はパセリ・クレイジーソルト・みりんです。</p>
+									好きな調味料はパセリ・クレイジーソルト・みりんです。クラシルというアプリでよくレシピを調べています。</p>
 							</div>
 						</div>
 						<div class="hobby-item">
