--- a/portfolio/index/word.html
+++ b/portfolio/index/word.html
@@ -6,21 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolioページ内で使われている単語</title>
     <link rel="stylesheet" href="word.css">
+    <link rel="shortcut icon" href="../img/favicon2.ico" />
 </head>
 <body>
     <header class="header ">
         <div class="inner">
             <h1 class="header-logo">
-                <a href=".">HINO KOK</a>
+                <a href="../../index.html">HINO KOK</a>
             </h1>
-            <nav class="header-nav">
-                <ul class="header-nav-list">
-                    <li class="header-nav-item"><a href="#about">ABOUT</a></li>
-                    <li class="header-nav-item"><a href="#works">WORKS</a></li>
-                    <li class="header-nav-item"><a href="#skill">SKILL</a></li>
-                    <li class="header-nav-item"><a href="#hobby">HOBBY</a></li>
-                </ul>
-            </nav>
+            <img class="imggazo" src="../img/gazo.png" alt="">
         </div>
     </header>
     <div class="back">
