--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="HINO KOKのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
 	<link href="portfolio/css/ress.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="portfolio/img/favicon.ico" />
+	<link rel="shortcut icon" href="portfolio/img/favicon2.ico" />
 </head>
 
 <body>
@@ -37,6 +37,7 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
+					<img class="imggazo" src="/portfolio/img/gazo.png" alt="">
 					<p class="main-visual-title">HINO KOK</p>
 					<p class="main-visual-subtitle">PORTFOLIO</p>
 					<div class="main-visual-profile">
@@ -162,7 +163,7 @@
 							</div>
 						</div>
 						<div class="hobby-item">
-							<p class="hobby-img"><img src="/portfolio/index/word.html" alt=""></p>
+							<p class="hobby-img"><img src="/portfolio/img/book.png" alt=""></p>
 							<div class="hobby-body">
 								<h3 class="hobby-name">読書</h3>
 								<p class="hobby-text">
