--- a/lesson7/contact/index.html
+++ b/lesson7/contact/index.html
@@ -52,19 +52,23 @@
         <img src="img/ttl_contact.svg" alt="お問い合わせフォーム">
       </h2>
       <!-- フォーム -->
-
+      <form action="">
+      
       <!-- お名前 -->
-      <div>
+      <div class="form-group">
         <!-- 項目名 -->
-        <label>お名前</label>
+        <label for="yourName" class="form-label">お名前</label>
         <!-- 入力欄：テキスト -->
-
+        <div>
+          <input type="text" name="お名前" id="yourName">
+        </div>
       </div>
+
       <!-- E-Mail -->
-      <div>
+      <div class="form-group">
         <!-- 項目名 -->
-        <label>E-Mail</label>
-        <!-- 入力欄：email -->
+        <label for="yourEmail" class="form-label">E-Mail</label>
+        <!-- 入力欄：email  koko!!! -->
 
       </div>
       <!-- お問い合わせ内容 -->
@@ -80,6 +84,8 @@
       </div>
 
       <!-- フォームここまで -->
+    
+    </form>
     </section>
     <!-- セクションここまで -->
   </main>
