--- a/lesson7/contact/index.html
+++ b/lesson7/contact/index.html
@@ -58,8 +58,8 @@
       <div class="form-group">
         <!-- 項目名 -->
         <label for="yourName" class="form-label">お名前</label>
-        <!-- 入力欄：テキスト -->
-        <div>
+        <div class="form-col">
+          <!-- 入力欄：テキスト -->
           <input type="text" name="お名前" id="yourName">
         </div>
       </div>
@@ -69,17 +69,25 @@
         <!-- 項目名 -->
         <label for="yourEmail" class="form-label">E-Mail</label>
         <!-- 入力欄：email  koko!!! -->
+        <div class="form-col">
+          <input type="email" name="E-Mail" id="your-Email">
+        </div>
 
       </div>
       <!-- お問い合わせ内容 -->
-      <div>
+      <div class="form-group">
         <!-- 項目名 -->
-        <label>お問い合わせ内容</label>
+        <label for="yourInquiry" class="form-label">お問い合わせ内容</label>
         <!-- 入力欄：テキストエリア -->
+        <div class="form-col">
+          <textarea name="お問い合わせ内容" id="yourInquiry" cols="30" rows="10">
+          </textarea>
+        </div>
 
       </div>
       <!-- 送信ボタン -->
-      <div>
+      <div class="form-btn">
+        <button type="submit"><img src="../img/btn_send.svg" alt="送信する"></button>
 
       </div>
 
