--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<div class="hobby-body">
 								<h3 class="hobby-name">料理</h3>
 								<p class="hobby-text">
-									好きな調味料はパセリ・クレイジーソルト・みりんです。<a href="https://www.kurashiru.com/">クラシル</a>というアプリでよくレシピを調べています。</p>
+									好きな調味料はパセリ・クレイジーソルト・みりんです。<a href="/portfolio/index/word.html">クラシル</a>というアプリでよくレシピを調べています。</p>
 							</div>
 						</div>
 						<div class="hobby-item">
