--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<h3 class="hobby-name">スマブラ</h3>
 								<p class="hobby-text">
 									たまに大会に出ています。メインはダックハント・パックン<br>
-									<a href="/portfolio/index/word.html">スマメイト</a>でレート1600</p>
+									<a href="portfolio/index/word.html">スマメイト</a>でレート1600</p>
 							</div>
 						</div>
 						<div class="hobby-item">
@@ -159,11 +159,11 @@
 							<div class="hobby-body">
 								<h3 class="hobby-name">料理</h3>
 								<p class="hobby-text">
-									好きな調味料はパセリ・クレイジーソルト・みりんです。<a href="/portfolio/index/word.html">クラシル</a>というアプリでよくレシピを調べています。</p>
+									好きな調味料はパセリ・クレイジーソルト・みりんです。<a href="portfolio/index/word.html">クラシル</a>というアプリでよくレシピを調べています。</p>
 							</div>
 						</div>
 						<div class="hobby-item">
-							<p class="hobby-img"><img src="/portfolio/img/book.png" alt=""></p>
+							<p class="hobby-img"><img src="portfolio/img/book.png" alt=""></p>
 							<div class="hobby-body">
 								<h3 class="hobby-name">読書</h3>
 								<p class="hobby-text">
