--- a/portfolio/index/word.html
+++ b/portfolio/index/word.html
@@ -28,12 +28,12 @@
             <h2>スマメイト</h2>
             <ul>
                 <li>大乱闘スマッシュブラザーズの国内最大規模のレーティングサイト</li>
-                <li>サイトは<a href="https://smashmate.net/">こちら</a>から</li>
+                <li>ホームページは<a href="https://smashmate.net/">こちら</a>から</li>
             </ul>
             <h2>クラシル</h2>
             <ul>
-                <li></li>
-                <li>サイトは<a href="https://www.kurashiru.com/">こちら</a>から</li>
+                <li>簡単でおいしく作れるレシピ動画を配信しているサービス</li>
+                <li>ホームページは<a href="https://www.kurashiru.com/">こちら</a>から</li>
             </ul>
         </div>
     </main>
