--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									Pythonは蛇という意味らしいです。蛇は好きです。</p>
+									編入組なので学習していません。Pythonは蛇という意味らしいです。蛇は好きです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -116,7 +116,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									以前はすっきりわかるシリーズの本で勉強していました。paizaでBランクぐらいです。</p>
+									以前はすっきりわかるシリーズの本で勉強していました。paizaでBランクです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
@@ -124,7 +124,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									基本情報はとれたと思います。高度種まで取れたらうれしいです。</p>
+									基本情報はとれました。高度種まで取れたらうれしいです。</p>
 							</div>
 						</div>
 					</div>
@@ -151,7 +151,7 @@
 							<div class="hobby-body">
 								<h3 class="hobby-name">APEX</h3>
 								<p class="hobby-text">
-									いつもランクはプラチナで疲れ果てています。好きなキャラはバンガロール・ブラッドハウント</p>
+									いつもランクはプラチナで疲れ果てています。好きなキャラはバンガロール・ホライゾン</p>
 							</div>
 						</div>
 						<div class="hobby-item">
