--- a/portfolio/index/word.html
+++ b/portfolio/index/word.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolioページ内で使われている単語</title>
+    <!-- <link href="ress.css" media="all" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="word.css">
     <link rel="shortcut icon" href="../img/favicon2.ico" />
 </head>
@@ -20,8 +21,8 @@
     
     <main>
         <div class="back">
-            <a href="../../index.html"><img src="../img/backArrow.png" alt="">
-            元のPORTFOLIOページに戻る</a>
+            <!-- <a href="../../index.html"><img src="../img/backArrow.png" alt="">
+            元のPORTFOLIOページに戻る</a> -->
         </div>
         <div class="hobby">
             <h1 class="types">HOBBY</h1>
