--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 							<div class="hobby-body">
 								<h3 class="hobby-name">APEX</h3>
 								<p class="hobby-text">
-									いつもランクはプラチナで疲れ果てています。好きなキャラはバンガロール・ホライゾン</p>
+									いつもランクはプラチナで疲れ果てています。<br>
+									好きなキャラはバンガロール・ホライゾン・アッシュ</p>
 							</div>
 						</div>
 						<div class="hobby-item">
@@ -159,7 +160,7 @@
 							<div class="hobby-body">
 								<h3 class="hobby-name">料理</h3>
 								<p class="hobby-text">
-									好きな調味料はパセリ・クレイジーソルト・みりんです。<a href="portfolio/index/word.html">クラシル</a>というアプリでよくレシピを調べています。</p>
+									好きな調味料はパセリ・クレイジーソルト・みりんです。最近マキシマムという調味料(とても美味しい)を手に入れることができて嬉しいです。<a href="portfolio/index/word.html">クラシル</a>というアプリでよくレシピを調べています。</p>
 							</div>
 						</div>
 						<div class="hobby-item">
@@ -187,6 +188,9 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script type="text/javascript" src="portfolio/js/script.js"></script>
+	<a href="#top">
+		<img class="pagetop" src="portfolio/img/pagetop4.png" alt="ページトップに戻る" width="60" height="60" />
+	</a>
 </body>
 
 </html>
