--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									以前はすっきりわかるシリーズの本で勉強していました。paizaでBランクです。</p>
+									以前はすっきりわかるシリーズの本で勉強していました。paizaでAランクです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
