--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
 	<link href="portfolio/css/ress.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="portfolio/img/favicon2.ico" />
+	<link rel="shortcut icon" href="portfolio/img/faviconKabuto.ico" />
 </head>
 
 <body>
@@ -152,7 +152,7 @@
 								<h3 class="hobby-name">APEX</h3>
 								<p class="hobby-text">
 									いつもランクはプラチナで疲れ果てています。<br>
-									好きなキャラはバンガロール・ホライゾン・アッシュ</p>
+									好きなキャラはバンガロール・コースティック・ホライゾン・アッシュ</p>
 							</div>
 						</div>
 						<div class="hobby-item">
