--- a/portfolio/index/word.html
+++ b/portfolio/index/word.html
@@ -7,10 +7,10 @@
     <title>portfolioページ内で使われている単語</title>
     <!-- <link href="ress.css" media="all" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="word.css">
-    <link rel="shortcut icon" href="../img/favicon2.ico" />
+    <link rel="shortcut icon" href="../img/faviconKabuto.ico" />
 </head>
 <body>
-    <header class="header ">
+    <header class="header">
         <div class="inner">
             <h1 class="header-logo">
                 <a href="../../index.html">HINO KOK</a>
@@ -19,11 +19,7 @@
         </div>
     </header>
     
-    <main>
-        <div class="back">
-            <!-- <a href="../../index.html"><img src="../img/backArrow.png" alt="">
-            元のPORTFOLIOページに戻る</a> -->
-        </div>
+    <main id="top">
         <div class="hobby">
             <h1 class="types">HOBBY</h1>
             <h2>スマメイト</h2>
@@ -37,6 +33,20 @@
                 <li>ホームページは<a href="https://www.kurashiru.com/">こちら</a>から</li>
             </ul>
         </div>
+        <div class="page-top" id="js-page-top">
+            <span class="material-icons-outlined">expand_less</span>
+        </div>
     </main>
+
+    <!-- footer -->
+		<footer class="footer">
+			<div class="copyright">&copy; HCS ITシステム科.</div>
+		</footer>
+		<!-- /footer -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<a href="#top">
+		<img class="pagetop" src="../img/pagetop4.png" alt="ページトップに戻る" width="60" height="60" />
+	</a>
 </body>
 </html>
